...
  const editorFields = (
    <>
      {showQuestionEditor && (
        <MarkdownEditorField
          editor={questionEditor}
          placeholder={questionPlaceholder}
          testID="flashcard-form-question-input"
          error={questionError}
          onFocus={() => onEditorFocus('question')}
          onBlur={() => onEditorBlur('question')}
          isMarkdownEditorFocused={isMarkdownEditorFocused}
        />
      )}

      {showAnswerEditor && (
        <MarkdownEditorField
          editor={answerEditor}
          placeholder={answerPlaceholder}
          testID="flashcard-form-answer-input"
          error={answerError}
          onFocus={() => onEditorFocus('answer')}
          onBlur={() => onEditorBlur('answer')}
          isMarkdownEditorFocused={isMarkdownEditorFocused}
        />
      )}
...
