...
          inactiveTextColor="$secondary"
          falseLabel={questionLabel}
          trueLabel={secondarySectionLabel}
          falseIcon="help-outline"
          trueIcon={isMultipleChoice ? 'format-list-bulleted' : 'chat-bubble-outline'}
          falseTestID="flashcard-form-question-toggle"
          trueTestID="flashcard-form-answer-toggle"
          falseHasError={questionHasError}
          trueHasError={secondarySectionHasError}
          showActiveLabel={isLargeScreen}
          equalSegmentWidths={isLargeScreen}
        />
      </XStack>
...
