appId: com.deploynk.flashcards
---
- tapOn:
    id: deck-detail-add-flashcard-button
- assertVisible:
    id: flashcard-form-screen

- tapOn:
    id: flashcard-form-question-input
- inputText: 'E2E Standard Flashcard Question'
- tapOn:
    id: flashcard-form-keyboard-done-button

- tapOn:
    id: flashcard-form-answer-toggle
- tapOn:
    id: flashcard-form-answer-input
- inputText: 'E2E Standard Flashcard Answer'
- tapOn:
    id: flashcard-form-keyboard-done-button

- scrollUntilVisible:
    element:
      id: flashcard-form-save-button
    direction: DOWN
- tapOn:
    id: flashcard-form-save-button
- assertVisible:
    id: deck-detail-screen
